--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -6,7 +6,7 @@
       Macros: {
         Otimes: '{\\bigotimes}',
         ideal: ['\\left\\langle {#1} \\right\\rangle', 1],
-        set: ['\\{ #1 \\}', 1],
+        set: ['\\left\\{ #1 \\right\\}', 1],
         mZ: '{\\mathbb{Z}}',
         mN: '{\\mathbb{N}}',
         mQ: '{\\mathbb{Q}}',
